Amending poem for correct spacing

--- a/assets/css/element-layout.scss
+++ b/assets/css/element-layout.scss
@@ -22,9 +22,10 @@ figure, blockquote { margin-left: 0; margin-right: 0; padding-left: 0; padding-r
 small a.ref { text-decoration: none; font-size: xx-small; }
 
 .poem {
-      font-family: var(--body-font);
-      color: var(--fg);
-      padding: 0;
+    &.mono { font-family: var(--code-font); }
+    font-family: var(--body-font);
+    color: var(--fg);
+    padding: 0;
 }
 
 blockquote {
